-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b103
-
Verified
This seems to happen when there is an unexpected exception and JVMCI tries to handle it.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\192945.cthaling\s\hotspot\src\os\windows\vm\os_windows.cpp:3539), pid=35024, tid=88988
# assert(!thread->is_Java_thread()) failed: must not be java thread
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-192945.cthaling.aot)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-192945.cthaling.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: C:\Users\aurora\sandbox\results\workDir\compiler\jvmci\SecurityRestrictionsTest\hs_err_pid35024.mdmp
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\192945.cthaling\s\hotspot\src\os\windows\vm\os_windows.cpp:3539), pid=35024, tid=88988
# assert(!thread->is_Java_thread()) failed: must not be java thread
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-10-192945.cthaling.aot)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-10-192945.cthaling.aot, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: C:\Users\aurora\sandbox\results\workDir\compiler\jvmci\SecurityRestrictionsTest\hs_err_pid35024.mdmp
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
- relates to
-
JDK-8146246 JVMCICompiler::abort_on_pending_exception: assert(!thread->owns_locks()) failed: must release all locks when leaving VM
-
- Closed
-