8145435: [JVMCI] some tests on Windows fail with: assert(!thread->is_Java_thread()) failed: must not be java thread

Reviewed-by: never, dnsimon, dholmes, coleenp